--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1579,6 +1579,10 @@ pre code {
   padding-left: 15px;
   padding-right: 15px;
 }
+.container_userHome {
+  margin-right: auto;
+  margin-left: auto;
+}
 @media (min-width: 768px) {
   .container {
     width: 750px;
