--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ input[type="button"]{
 	height: 100px;
 	margin: 5px;
 }
-a{
+nav a{
 	font-size:18px;	
 }
 .left{
@@ -105,6 +105,10 @@ a{
 	height: 130px !important;
 	padding: inherit;
 }
+#button_color{
+	background-color: #732C7B;
+	border: none;
+}
 
 .container_userHome #computerImage{
 	height: 300px;
@@ -117,4 +121,17 @@ a{
 .container_userHome #testMessage{
 
 	margin-top: 80px;
+}
+
+select {
+	padding:3px;
+	margin: 0;
+	border-radius:4px;
+	background: #732C7B;
+	color:white;
+	font-weight: bold;
+	border:none;
+	outline:none;
+	display: inline-block;
+	cursor:pointer;
 }
