--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ nav a{
 	background-color: #732C7B;
 	border: none;
     margin-top: 20px;
+	box-shadow: 10px 10px 5px #888888;
 }
 
 .container_userHome #computerImage{
